# Design-Patterns-and-Best-Practices-in-Rust

./: .gitignore  README.md
ch1/: README.md
ch1/bad_calculator/src/: main.rs
ch2/: README.md  block_finder.rs
ch2/bad_calculator/: Cargo.toml
ch2/bad_calculator/src/: main.rs
ch2/not_so_bad_calculator/: Cargo.toml
ch2/not_so_bad_calculator/src/: main.rs
ch2/pets/: Cargo.toml
ch2/pets/src/: main.rs
ch2/worse_calculator/: Cargo.toml
ch2/worse_calculator/src/: main.rs  main_slightly_worse.rs
ch3/bad-calculator/: Cargo.toml  README.md
ch3/bad-calculator/src/: cloning_everything.rs  ownership_concerns.rs  rc_and_refcell.rs
ch3/examples/: 1-ownership-concerns.rs  2-ownership-concerns.rs  3-ownership-concerns.rs  4-cloning-everything.rs  5-cloning-everything.rs  6-rc-and-refcell.rs  7-rc-and-refcell.rs  7a-rc-and-refcell.rs  8-rc-and-refcell.rs
ch4/bad-calculator/: Cargo.toml
ch4/bad-calculator/src/: fighting_borrow_checker.rs  unsafe_example.rs
ch5/correct-calculator/: Cargo.toml  README.md
ch5/correct-calculator/src/: builder.rs  main.rs  token.rs
ch6/correct-calculator/: Cargo.toml  README.md
ch6/correct-calculator/src/: adapter.rs  bridge.rs  config.rs  decorator.rs  expression.rs  facade.rs  factory.rs  main.rs
ch7/correct-calculator/: Cargo.toml  README.md
ch7/correct-calculator/src/: command.rs  config.rs  expression.rs  main.rs  template.rs
ch8/correct-calculator/: README.md
ch8/correct-calculator/src/: adapter.rs  bridge.rs  chain.rs  config.rs  expression.rs  iterator.rs  main.rs  mediator.rs  memento.rs  observer.rs  (+5 more)
